[tool.poetry]
name = "y24fw"
version = "0.1.5"
description = "Library"
authors = ["Yooshyasha <maksimmorozov962@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"
pytest-asyncio = "^0.23.8"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
